force-app/main/default/objects/OrderItem/fields/DetailUrl__c.field-meta.xml
<CustomField>
    <fullName>DetailUrl__c</fullName>
    <description>Completo da URL do produto do campo ImageUrl.</description>
    <label>Detalhe da URL</label>
    <type>Url</type>
</CustomField>