force-app/main/default/objects/OrderItem/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Valor do desconto por item, subtraindo o Selling Price do Price.</description>
    <formula>( Preco__c -  UnitPrice ) * Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Desconto</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>