force-app/main/default/objects/OrderItem/fields/ImageUrl__c.field-meta.xml
<CustomField>
    <fullName>ImageUrl__c</fullName>
    <description>URL da imagem do produto.</description>
    <label>URL da Imagem</label>
    <type>Url</type>
</CustomField>