force-app/main/default/objects/OrderItem/fields/IsGift__c.field-meta.xml
<CustomField>
    <fullName>IsGift__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informa se o item é presente ou não.</description>
    <label>Presente?</label>
    <type>Checkbox</type>
</CustomField>