force-app/main/default/objects/OrderItem/fields/IsSubsidized__c.field-meta.xml
<CustomField>
    <fullName>IsSubsidized__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Informa se o produto é subsidiado.</description>
    <label>É Subsidiado?</label>
    <type>Checkbox</type>
</CustomField>