force-app/main/default/objects/OrderItem/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para o objeto Caso, para identificar qual produto foi trocado.</description>
    <label>Caso</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Produtos do pedido</relationshipLabel>
    <relationshipName>OrderItemCase</relationshipName>
    <type>Lookup</type>
</CustomField>