force-app/main/default/objects/OrderItem/fields/OriginSkuId__c.field-meta.xml
<CustomField>
    <fullName>OriginSkuId__c</fullName>
    <label>ID Original do SKU</label>
    <length>100</length>
    <type>Text</type>
</CustomField>