force-app/main/default/objects/OrderItem/fields/PreSaleDate__c.field-meta.xml
<CustomField>
    <fullName>PreSaleDate__c</fullName>
    <description>Data da Pré venda do item.</description>
    <label>Data de Pré Venda</label>
    <type>Date</type>
</CustomField>