force-app/main/default/objects/OrderItem/fields/Sku__c.field-meta.xml
<CustomField>
    <fullName>Sku__c</fullName>
    <description>SKU ou EAN, Código de produto único.</description>
    <externalId>true</externalId>
    <label>SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>